--- a/src/components/menu/style.css
+++ b/src/components/menu/style.css
@@ -8,18 +8,43 @@
 }
 
 #start{
-  width:30vw;
+  width:20vw;
   position:absolute;
   bottom: 10vh;
+  background:black;
+  color:white;
+  font-size: 3vh;
+  
+}
+
+#start:hover{
+  transform: scale(1.05);
 }
 
 #title {
   position:absolute;
   top: 10vh;
+  color: black;
 }
 
 #hang-man-image{
   height:40vh;
   position:absolute;
   top: 30vh;
+  filter: invert(1);
+  transform: translate(5vh);
+}
+
+#transitions {
+  background:black;
+  height: 100vh;
+  width:100vw;
+  z-index: 10;
+  animation: fadein 1.5s;
+  opacity: 1;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
